@@ -1,5 +1,13 @@
 2005-08-09  Carl Worth  <cworth@cworth.org>
 
+	* src/cairo-arc-private.h:
+	* src/cairo-ft-private.h:
+	* src/cairo-meta-surface-private.h:
+	* src/cairoint.h: Add cairo_private to several function prototypes
+	that were missing it.
+
+2005-08-09  Carl Worth  <cworth@cworth.org>
+
 	* ROADMAP: Note that sane clipping is done now. Add release
 	versions for previously completed items.
 
